--- a/MyFirstProject/ViewViewModel/Main/MainPage.xaml
+++ b/MyFirstProject/ViewViewModel/Main/MainPage.xaml
@@ -1,9 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MyFirstProject.MainPage">
-
+             x:Class="MyFirstProject.MainPage"
+             Title = "{Binding Title}">
+    
     <StackLayout>
+        <Frame BackgroundColor="#2196f3"
+            Padding="1"
+            CornerRadius="0">
+
+            <Label Text="My Mobile App!"
+                   HorizontalTextAlignment="Center"
+                   TextColor="White"
+                   FontSize="36"/>
+        </Frame>
+
         <Grid Margin="20,35,20,20">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width=".5*"/>
