Fixed Navigation - Button Command

--- a/MyFirstProject/ViewViewModel/Layouts/LayoutsMenuView.xaml
+++ b/MyFirstProject/ViewViewModel/Layouts/LayoutsMenuView.xaml
@@ -4,11 +4,10 @@
              x:Class="MyFirstProject.ViewViewModel.Layouts.LayoutsMenuView"
              Title="{Binding Title}">
 
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
+    <StackLayout>
+        <Label Text="Layouts Page!"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>
+    </StackLayout>
+
 </ContentPage>
