--- a/MyFirstProject/ViewViewModel/Image/ImageMenuView.xaml
+++ b/MyFirstProject/ViewViewModel/Image/ImageMenuView.xaml
@@ -6,7 +6,7 @@
     
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
+            <Label Text="Image Page!"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
         </StackLayout>
