--- a/MyFirstProject/ViewViewModel/Layouts/LayoutsMenuView.xaml
+++ b/MyFirstProject/ViewViewModel/Layouts/LayoutsMenuView.xaml
@@ -9,6 +9,21 @@
                    Grid.Column="0"
                    Text="Absolute Layout"
                    Command="{Binding OnAbsoluteLayoutClicked}"/>
+        
+        <Button Grid.Row="0"
+                   Grid.Column="0"
+                   Text="Absolute Layout Project"
+                   Command="{Binding OnAbsoluteLayoutProjectClicked}"/>
+        
+        <Button Grid.Row="0"
+                   Grid.Column="0"
+                   Text="Relative Layout"
+                   Command="{Binding OnRelativeLayoutClicked}"/>
+        
+        <Button Grid.Row="0"
+                   Grid.Column="0"
+                   Text="Relative Layout Project"
+                   Command="{Binding OnRelativeLayoutProjectClicked}"/>
     </StackLayout>
 
 </ContentPage>
