--- a/MyFirstProject/ViewViewModel/Image/EmbeddedImageProject/EmbeddedImageProjectView.xaml
+++ b/MyFirstProject/ViewViewModel/Image/EmbeddedImageProject/EmbeddedImageProjectView.xaml
@@ -1,11 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MyFirstProject.ViewViewModel.Image.EmbeddedImages.EmbeddedImagesView"
-             Title = "{Binding Title}">
-
+             x:Class="MyFirstProject.ViewViewModel.Image.EmbeddedImageProject.EmbeddedImageProjectView"
+             Title="{Binding Title}">
     <StackLayout>
-        <Image Source="{Binding EmbeddedImageSrc}"
+        <Image Source="{Binding Image}"
                Aspect="AspectFill"/>
     </StackLayout>
 </ContentPage>
