--- a/MyFirstProject/ViewViewModel/Image/EmbeddedImageProject/EmbeddedImageProjectView.xaml
+++ b/MyFirstProject/ViewViewModel/Image/EmbeddedImageProject/EmbeddedImageProjectView.xaml
@@ -3,8 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MyFirstProject.ViewViewModel.Image.EmbeddedImageProject.EmbeddedImageProjectView"
              Title="{Binding Title}">
-    <StackLayout>
-        <Image Source="{Binding Image}"
-               Aspect="AspectFill"/>
+
+    <StackLayout VerticalOptions="Center"
+                 HorizontalOptions="Center">
+
+        <Image Source="{Binding EmbeddedImage}"
+               Aspect="Fill"/>
     </StackLayout>
+    
 </ContentPage>
