--- a/MyFirstProject/ViewViewModel/Image/URLImageProject/URLImageProjectView.xaml
+++ b/MyFirstProject/ViewViewModel/Image/URLImageProject/URLImageProjectView.xaml
@@ -1,11 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MyFirstProject.ViewViewModel.Image.EmbeddedImages.EmbeddedImagesView"
+             x:Class="MyFirstProject.ViewViewModel.Image.URLImageProject.URLImageProjectView"
              Title = "{Binding Title}">
 
-    <StackLayout>
-        <Image Source="{Binding EmbeddedImageSrc}"
-               Aspect="AspectFill"/>
-    </StackLayout>
+    <Image Source = "{Binding Image}"/>
 </ContentPage>
