--- a/MyFirstProject/ViewViewModel/Image/ActivityIndicator/ActivityIndicatorView.xaml
+++ b/MyFirstProject/ViewViewModel/Image/ActivityIndicator/ActivityIndicatorView.xaml
@@ -2,10 +2,19 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MyFirstProject.ViewViewModel.Image.ActivityIndicator.ActivityIndicatorView"
-             Title = "{Binding Title}">
+             Title = "{Binding Title}"
+             x:Name="Window">
 
-    <StackLayout>
-        <Image Source="{Binding ActivityIndicatorImageSrc}"
+    <AbsoluteLayout>
+        <ActivityIndicator
+            IsVisible="True"
+            IsEnabled="True"
+            IsRunning="{Binding Source={x:Reference image}, Path=IsLoading}"
+            VerticalOptions="Center"
+            HorizontalOptions="Center"/>
+        
+        <Image x:Name="image" 
+               Source="{Binding ActivityIndicatorImageSrc}"
                Aspect="Fill"/>
-    </StackLayout>
+    </AbsoluteLayout>
 </ContentPage>
