--- a/MyFirstProject/ViewViewModel/ListView/ListViewButtons/ListViewButtonsView.xaml
+++ b/MyFirstProject/ViewViewModel/ListView/ListViewButtons/ListViewButtonsView.xaml
@@ -6,6 +6,10 @@
              x:Class="MyFirstProject.ViewViewModel.ListView.ListViewButtons.ListViewButtonsView"
              Title = "{Binding Title}">
     
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Add" x:Name="Add Button" Command="{Binding AddCommand}" />
+    </ContentPage.ToolbarItems>
+    
     <ContentPage.Content>
         <CollectionView x:Name="ItemsListView"
                     ItemsSource="{Binding Cards, Mode=TwoWay}"
@@ -19,6 +23,7 @@
 
                         <Grid.RowDefinitions>
                             <RowDefinition Height="0.5*"/>
+                            <RowDefinition Height="0.1*"/>
                             <RowDefinition Height="0.1*"/>
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
@@ -35,6 +40,7 @@
                                FontAttributes="Bold"/>
                         </StackLayout>
 
+                        
                         <StackLayout Grid.Column="2">
                             <Button Text="Update"
                                     ScaleX=".6"
@@ -42,7 +48,7 @@
                                     Command="{Binding Path=BindingContext.UpdateCommand,
                                         Source={x:Reference ItemsListView}, Mode=TwoWay}"
                                     CommandParameter="{Binding .}">
-                                
+
                             </Button>
                         </StackLayout>
 
