--- a/MyFirstProject/ViewViewModel/Controls/ControlsMenuView.xaml
+++ b/MyFirstProject/ViewViewModel/Controls/ControlsMenuView.xaml
@@ -25,7 +25,7 @@
                 <Button Grid.Row="0"
                    Grid.Column="1"
                    Text="Stepper"
-                   Command="{Binding OnAbsoluteLayoutClicked}"/>
+                   Command="{Binding OnStepperClicked}"/>
 
                 <Button Grid.Row="1"
                    Grid.Column="0"
