--- a/MyFirstProject/ViewViewModel/Controls/ControlsMenuView.xaml
+++ b/MyFirstProject/ViewViewModel/Controls/ControlsMenuView.xaml
@@ -35,7 +35,7 @@
                 <Button Grid.Row="1"
                    Grid.Column="1"
                    Text="Entry"
-                   Command="{Binding OnAbsoluteLayoutClicked}"/>
+                   Command="{Binding OnEntryClicked}"/>
             </Grid>
             
             <Button Text="Picker"
